--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -8,6 +8,17 @@
 
 .WeatherForecast .ForecastDay {
   margin-top: 20px;
+  padding-top: 5px;
+}
+
+.WeatherForecast .ForecastDailyBox {
+  padding-bottom: 5px;
+}
+
+.WeatherForecast .ForecastDailyBox:hover {
+  background-color: #01354f;
+  border-radius: 10px;
+  transition: all 150ms ease-in-out;
 }
 
 .WeatherForecast .ForecastTemperatures {
@@ -16,6 +27,6 @@
 }
 
 .WeatherForecast .ForecastTemperatureMin {
-  opacity: 0.6;
+  opacity: 0.7;
   margin-left: 2px;
 }
